--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <groupId>com.ognev</groupId>
     <artifactId>spark-bdt</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <url>http:mave.apache.org</url>
 
     <properties>
         <java.version>1.8</java.version>
@@ -131,6 +132,20 @@
     </dependency>
     
 
+<dependency>
+        <groupId>org.apache.hbase</groupId>
+        <artifactId>hbase</artifactId>
+        <version>1.2.0</version>
+        <type>pom</type>
+    </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-spark -->
+
+
+
+
     </dependencies>
+    
+    
 
 </project>
