--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,16 @@
 <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-spark -->
 
 
-
+<dependency>
+     <groupId>org.apache.hbase</groupId>
+     <artifactId>hbase-client</artifactId>
+     <version>1.1.2</version>
+ </dependency>
+ <dependency>
+     <groupId>org.apache.phoenix</groupId>
+     <artifactId>phoenix-core</artifactId>
+     <version>4.4.0-HBase-1.1</version>
+ </dependency>
 
     </dependencies>
     
